first files for snntorch training

--- a/plot_multiple.ipynb
+++ b/plot_multiple.ipynb
@@ -2,15 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from astrosite_dataset import AstrositeDataset\n",
     "\n",
-    "dataset_path = 'data/astrosite/recordings'\n",
+    "dataset_path = '../dataset/recordings'\n",
     "target_id = 37867\n",
     "dataset = AstrositeDataset(dataset_path, split=str(target_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(  0,  175, 174,  True) (456,  895, 275, False) (568, 1145, 413, False)\n",
+      " (596, 1093, 246, False) (644,  462, 284,  True)]\n",
+      "[(  0, 175, 174,  True,  0) (728, 177, 173,  True, 26)\n",
+      " (775, 177, 171,  True, 25) (793, 184, 172,  True,  0)\n",
+      " (950, 427, 467,  True,  0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset[0]['events'][:5])\n",
+    "print(dataset[0]['labelled_events'][:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spinnaker_loader import EventsLoader\n",
+    "\n",
+    "train_loader = EventsLoader(dataset, bins_per_sample=8, sample_time=1000000)"
    ]
   },
   {
