--- a/train.ipynb
+++ b/train.ipynb
@@ -18,7 +18,7 @@
     "import snntorch as snn\n",
     "from snntorch import spikeplot as splt\n",
     "from snntorch import spikegen\n",
-    "from astrosite_dataset import AstrositeDataset\n",
+    "from astrosite_dataset import build_merge_dataset\n",
     "from spinnaker_loader import EventsLoader\n",
     "\n",
     "import torch\n",
@@ -27,28 +27,10 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import itertools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "380\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataset_path = '../dataset/recordings'\n",
-    "target_id = 37867\n",
-    "dataset = AstrositeDataset(dataset_path, split=str(target_id))\n",
-    "train_loader = EventsLoader(dataset, bins_per_sample=8, sample_time=1000000)\n",
-    "print(len(train_loader))"
+    "import itertools\n",
+    "\n",
+    "from tonic.slicers import SliceByTime\n",
+    "from tonic import SlicedDataset, transforms"
    ]
   },
   {
@@ -60,25 +42,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "(4, 277969)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "only integer scalar arrays can be converted to a scalar index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test \u001b[39m=\u001b[39m train_loader[\u001b[39m300\u001b[39;49m]\n",
-      "File \u001b[0;32m~/Documents/satellite-characterization/spinnaker_loader.py:49\u001b[0m, in \u001b[0;36mEventsLoader.__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mprint\u001b[39m(events_attributes\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     48\u001b[0m events_attributes_ts \u001b[39m=\u001b[39m events_attributes[\u001b[39m0\u001b[39m]\n\u001b[0;32m---> 49\u001b[0m events_attributes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mconcatenate(events_attributes[:\u001b[39m3\u001b[39;49m], events_attributes_ts)\n\u001b[1;32m     50\u001b[0m \u001b[39mprint\u001b[39m(events_attributes\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     53\u001b[0m slicing_time_window \u001b[39m=\u001b[39m \u001b[39m50000\u001b[39m  \u001b[39m# microseconds\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+      "Metadata written to metadata/train_event/slice_metadata.h5.\n",
+      "Metadata written to metadata/train_label/slice_metadata.h5.\n",
+      "Metadata written to metadata/test_event/slice_metadata.h5.\n",
+      "Metadata written to metadata/test_label/slice_metadata.h5.\n"
      ]
     }
    ],
    "source": [
-    "test = train_loader[300]"
+    "dataset_path = '../dataset/recordings'\n",
+    "\n",
+    "train_target_list = ['50574', '47851', '37951', '39533', '43751', '32711', '27831', '45465',\n",
+    "       '46826', '42942', '42741', '41471', '43873', '40982', '41725', '43874']\n",
+    "\n",
+    "test_target_list = [ '27711', '40892', '50005', '44637']\n",
+    "\n",
+    "train_set = build_merge_dataset(dataset_path, split=train_target_list, metadata_paths=['metadata/train_event','metadata/train_label'])\n",
+    "test_set = build_merge_dataset(dataset_path, split=test_target_list, metadata_paths=['metadata/test_event','metadata/test_label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11693\n",
+      "3587\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dataloader arguments\n",
+    "batch_size = 128\n",
+    "\n",
+    "train_kwargs = {\n",
+    "        'shuffle': True,\n",
+    "        'batch_size': batch_size,\n",
+    "        'num_workers': 2,\n",
+    "    }\n",
+    "test_kwargs = {\n",
+    "        'shuffle': True,\n",
+    "        'batch_size': batch_size,\n",
+    "        'num_workers': 2,\n",
+    "    }\n",
+    "\n",
+    "print(len(train_set))\n",
+    "print(len(test_set))\n",
+    "train_loader = torch.utils.data.DataLoader(train_set, **train_kwargs)\n",
+    "test_loader = torch.utils.data.DataLoader(test_set, **test_kwargs)\n",
+    "\n",
+    "\n",
+    "dtype = torch.float\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "loss = nn.CrossEntropyLoss()\n",
+    "#optimizer = torch.optim.Adam(net.parameters(), lr=5e-4, betas=(0.9, 0.999))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, targets, object_id = train_set[0]\n",
+    "data = data.to(device)\n",
+    "targets = targets.to(device)"
    ]
   },
   {
@@ -87,9 +119,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def coordinate_loss(output, label) :\n",
-    "    #(x,y) coordinates of the satellite, rate encoding or voltage values\n",
-    "    return (output[0]-label[0])**2 + (output[1]-label[1])**2"
+    "from utils import train_printer, print_batch_accuracy\n",
+    "\n",
+    "num_epochs = 1\n",
+    "num_steps = 8\n",
+    "loss_hist = []\n",
+    "test_loss_hist = []\n",
+    "counter = 0\n",
+    "\n",
+    "# Outer training loop\n",
+    "for epoch in range(num_epochs):\n",
+    "    iter_counter = 0\n",
+    "    train_batch = iter(train_loader)\n",
+    "\n",
+    "    # Minibatch training loop\n",
+    "    for data, targets in train_batch:\n",
+    "        data = data.to(device)\n",
+    "        targets = targets.to(device)\n",
+    "\n",
+    "        # forward pass\n",
+    "        net.train()\n",
+    "        spk_rec, mem_rec = net(data.view(batch_size, -1))\n",
+    "\n",
+    "        # initialize the loss & sum over time\n",
+    "        loss_val = torch.zeros((1), dtype=dtype, device=device)\n",
+    "        for step in range(num_steps):\n",
+    "            loss_val += loss(mem_rec[step], targets)\n",
+    "\n",
+    "        # Gradient calculation + weight update\n",
+    "        optimizer.zero_grad()\n",
+    "        loss_val.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Store loss history for future plotting\n",
+    "        loss_hist.append(loss_val.item())\n",
+    "\n",
+    "        # Test set\n",
+    "        with torch.no_grad():\n",
+    "            net.eval()\n",
+    "            test_data, test_targets = next(iter(test_loader))\n",
+    "            test_data = test_data.to(device)\n",
+    "            test_targets = test_targets.to(device)\n",
+    "\n",
+    "            # Test set forward pass\n",
+    "            test_spk, test_mem = net(test_data.view(batch_size, -1))\n",
+    "\n",
+    "            # Test set loss\n",
+    "            test_loss = torch.zeros((1), dtype=dtype, device=device)\n",
+    "            for step in range(num_steps):\n",
+    "                test_loss += loss(test_mem[step], test_targets)\n",
+    "            test_loss_hist.append(test_loss.item())\n",
+    "\n",
+    "            # Print train/test loss/accuracy\n",
+    "            if counter % 50 == 0:\n",
+    "                train_printer(\n",
+    "                    data, targets, epoch,\n",
+    "                    counter, iter_counter,\n",
+    "                    loss_hist, test_loss_hist,\n",
+    "                    test_data, test_targets)\n",
+    "            counter += 1\n",
+    "            iter_counter +=1"
    ]
   }
  ],
