updated plot_multiple notebook

--- a/plot_multiple.ipynb
+++ b/plot_multiple.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from astrosite_dataset import AstrositeDataset\n",
     "\n",
     "dataset_path = 'data/astrosite/recordings'\n",
-    "target_id = 37867\n",
-    "dataset = AstrositeDataset(dataset_path, split=str(target_id))"
+    "target_id = 50574\n",
+    "dataset = AstrositeDataset(dataset_path, split=str(target_id))\n",
+    "len(dataset)"
    ]
   },
   {
@@ -22,20 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping sample with labels [-2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38]\n",
-      "Skipping sample with labels [-2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "samples = []\n",
+    "orig_samples = []\n",
+    "sat_samples = []\n",
     "n_samples = 9\n",
     "\n",
     "for sample in dataset:\n",
@@ -43,18 +47,18 @@
     "    if labels[0] < -1:\n",
     "        print(f\"Skipping sample with labels {labels}\")\n",
     "        continue\n",
-    "    \n",
-    "    events = sample['labelled_events']\n",
-    "    sat_events = events[events['label'] == -1]\n",
-    "    if len(sat_events) > 320:\n",
-    "        samples.append(sat_events)\n",
-    "    if len(samples) >= n_samples:\n",
+    "    events = sample['events']\n",
+    "    orig_samples.append(events)\n",
+    "    sat_events = sample['labelled_events']\n",
+    "    sat_events = sat_events[sat_events['label'] == -1]\n",
+    "    sat_samples.append(sat_events)\n",
+    "    if len(sat_samples) >= n_samples:\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,18 +67,18 @@
        "9"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(samples)\n"
+    "len(sat_samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,39 +93,28 @@
     "        index = i*side_length+j\n",
     "        x_shift = max_x*j\n",
     "        y_shift = max_y*i\n",
-    "        samples[index]['x'] += x_shift\n",
-    "        samples[index]['y'] += y_shift\n",
+    "        sat_samples[index]['x'] += x_shift\n",
+    "        sat_samples[index]['y'] += y_shift\n",
+    "        orig_samples[index]['x'] += x_shift\n",
+    "        orig_samples[index]['y'] += y_shift\n",
     "\n",
-    "merged_events = np.concatenate(samples)\n",
-    "merged_events = np.sort(merged_events, order='t')"
+    "merged_sat_events = np.concatenate(sat_samples)\n",
+    "merged_sat_events = np.sort(merged_sat_events, order='t')\n",
+    "merged_orig_events = np.concatenate(orig_samples)\n",
+    "merged_orig_events = np.sort(merged_orig_events, order='t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import event_stream\n",
     "\n",
-    "encoder = event_stream.Encoder('merged_events.es', 'dvs', 1280*side_length, 720*side_length)"
+    "event_stream.Encoder('merged_sat_events.es', 'dvs', 1280*side_length, 720*side_length).write(merged_sat_events)\n",
+    "event_stream.Encoder('merged_orig_events.es', 'dvs', 1280*side_length, 720*side_length).write(merged_orig_events)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoder.write(merged_events)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
