split spectrogram into chunks to increase dataset size

--- a/classification_dataset_generation.ipynb
+++ b/classification_dataset_generation.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6987"
+       "169"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,7 +21,8 @@
     "\n",
     "dataset_path = \"data/astrosite/recordings\"\n",
     "\n",
-    "dataset = LabelledEventsAstrositeDataset(dataset_path, split=\"all\")\n",
+    "# dataset = LabelledEventsAstrositeDataset(dataset_path, split=\"all\")\n",
+    "dataset = LabelledEventsAstrositeDataset(dataset_path, split=[\"39483\", \"39485\", \"39624\", \"40921\", \"43751\", \"43752\", \"50574\", \"51102\"])\n",
     "len(dataset)"
    ]
   },
@@ -34,21 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6987/6987 [07:17<00:00, 15.98it/s]"
+      "  0%|          | 0/169 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 169/169 [01:31<00:00,  1.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'40697': 10, '39762': 13, '39358': 8, '43567': 6, '37765': 12, '43437': 18, '44076': 10, '23467': 21, '43873': 19, '49505': 21, '54377': 15, '53526': 6, '39059': 18, '54153': 2, '37834': 26, '51288': 2, '55264': 8, '39455': 12, '47719': 11, '52255': 17, '37846': 6, '27711': 29, '40146': 6, '55131': 24, '40982': 29, '52909': 8, '52984': 6, '54700': 15, '43920': 8, '47613': 19, '47510': 2, '43752': 22, '35500': 9, '40555': 5, '56371': 3, '39490': 7, '43753': 16, '36106': 2, '38733': 9, '44552': 28, '37168': 5, '50574': 39, '52944': 1, '39070': 24, '31800': 18, '39206': 27, '43618': 7, '44389': 6, '41471': 28, '40892': 34, '38098': 4, '26356': 11, '37237': 9, '44850': 9, '50005': 29, '47321': 27, '54214': 19, '44978': 10, '44637': 30, '29155': 4, '38356': 8, '50002': 10, '40922': 15, '54230': 28, '46497': 5, '40294': 15, '26038': 29, '55912': 20, '43657': 12, '53948': 6, '53946': 3, '37152': 12, '46805': 22, '42741': 28, '42969': 12, '53950': 6, '43874': 14, '40261': 7, '54223': 22, '32393': 6, '37753': 6, '29495': 28, '39256': 7, '40286': 14, '28628': 28, '41579': 8, '53761': 8, '47851': 21, '41549': 17, '39761': 17, '33331': 7, '43058': 7, '42063': 16, '45611': 1, '37847': 4, '48914': 7, '44299': 15, '53355': 13, '46826': 26, '38107': 2, '41725': 29, '44903': 3, '49113': 6, '41335': 17, '40345': 13, '53320': 2, '27704': 7, '39483': 23, '54372': 9, '40699': 11, '55268': 12, '49433': 3, '49503': 22, '38070': 5, '41918': 4, '56761': 1, '52908': 5, '45608': 17, '40921': 26, '39057': 13, '41021': 18, '44067': 14, '40890': 9, '41869': 23, '49260': 11, '54374': 7, '29486': 8, '27718': 23, '46916': 24, '49060': 6, '49258': 3, '45358': 13, '51511': 15, '47230': 5, '39017': 3, '56874': 8, '23613': 13, '54699': 14, '28089': 18, '45854': 3, '35696': 8, '32252': 23, '25501': 6, '48274': 3, '47546': 16, '32954': 14, '49809': 5, '39491': 8, '41032': 20, '40534': 11, '28158': 8, '23132': 8, '42939': 12, '40920': 14, '39155': 7, '35498': 10, '40887': 18, '27566': 12, '6192': 7, '37951': 24, '42942': 25, '37737': 3, '49059': 5, '37154': 15, '43057': 8, '40544': 5, '23754': 4, '39484': 16, '32956': 13, '55243': 4, '44390': 8, '49391': 4, '28190': 4, '23589': 3, '41394': 12, '40420': 12, '43751': 31, '39634': 2, '53611': 3, '41838': 6, '45915': 10, '49448': 3, '52202': 11, '52758': 3, '33051': 16, '54381': 12, '39019': 7, '36095': 14, '51102': 26, '45859': 4, '26052': 11, '49125': 18, '42719': 12, '43619': 7, '8621': 8, '48916': 6, '45465': 34, '37677': 4, '27663': 2, '41174': 2, '51847': 7, '39485': 25, '43032': 6, '27831': 23, '40141': 22, '43339': 2, '56759': 19, '52145': 8, '26388': 8, '54746': 5, '44453': 20, '55062': 1, '37867': 5, '38012': 4, '24315': 5, '45251': 3, '40746': 15, '44422': 8, '36111': 6, '40315': 9, '53318': 1, '28924': 20, '53813': 19, '43055': 3, '48157': 7, '38861': 5, '53885': 2, '7373': 8, '40001': 10, '39763': 13, '39177': 5, '57045': 8, '45985': 7, '49070': 6, '45612': 4, '43611': 20, '40358': 13, '26575': 16, '54878': 13, '40101': 2, '43162': 7, '54376': 3, '39624': 21, '41862': 4, '55683': 12, '54031': 3, '43056': 9, '53522': 3, '28129': 8, '43565': 6, '48917': 12, '53763': 5, '41550': 13, '37869': 7, '40882': 10, '48859': 4, '41634': 11, '44517': 4, '51075': 4, '52907': 4, '50322': 5, '39157': 7, '36358': 11, '21639': 18, '38049': 1, '54817': 3, '41860': 7, '44421': 14, '48865': 1, '49141': 2, '32955': 8, '41859': 3, '30794': 14, '53760': 5, '42986': 8, '24819': 7, '54042': 4, '33433': 1, '43687': 11, '41121': 2, '24876': 2, '41328': 1, '28899': 14, '41882': 4, '26719': 1, '44506': 2, '49501': 1, '39727': 12, '47506': 8, '39620': 11, '49810': 4, '40889': 2, '32275': 6, '44323': 1, '32260': 3, '37730': 5, '40105': 7, '43519': 2, '53943': 2, '53586': 3, '53807': 6, '37804': 8, '23967': 3, '49961': 2, '24737': 7, '54043': 3, '43508': 8, '32060': 5, '37234': 1, '55049': 3, '37868': 8, '52759': 2, '39208': 2, '53949': 2, '45254': 4, '43800': 4, '49390': 2, '55242': 2, '29079': 2, '53524': 7, '35946': 8, '53316': 1, '51280': 1, '44424': 1, '38978': 2, '41175': 2, '49818': 4, '39210': 4, '28474': 2, '54750': 3, '48268': 2, '40115': 6, '46610': 2, '43564': 6, '54383': 2, '51954': 2, '43491': 1, '48482': 1, '56372': 2, '40730': 1, '54752': 3, '32276': 11, '41330': 3, '32711': 5, '51281': 2, '39508': 1, '56740': 2, '36088': 2, '41103': 1, '41194': 1, '47967': 1, '49393': 2, '23839': 4, '41099': 2, '52940': 2, '33749': 1, '35756': 1, '38011': 3, '47973': 1, '56754': 4, '41879': 1, '39209': 1, '28884': 1, '52755': 3, '39166': 1, '54045': 4, '45920': 1, '56753': 3, '43445': 1, '28874': 1, '48918': 4, '43488': 2, '41794': 2, '22563': 1, '28117': 1, '40129': 3, '48941': 1, '53947': 3, '43917': 1, '37933': 1, '53876': 1, '52749': 2, '45986': 1, '47252': 1, '49330': 1, '50319': 2, '54748': 2, '45250': 1, '43711': 2})\n"
+      "defaultdict(<class 'int'>, {'43752': 17, '50574': 31, '39483': 18, '40921': 20, '43751': 24, '51102': 20, '39485': 20, '39624': 16})\n"
      ]
     },
     {
@@ -70,6 +78,9 @@
     "sample_counts = defaultdict(int)\n",
     "save_to_folder = \"data/astrosite/spectrograms\"\n",
     "\n",
+    "n_chunks = 40  # Number of chunks to split each sample into\n",
+    "chunk_size = 30000 // n_chunks  # Size of each chunk in samples\n",
+    "\n",
     "for sample in tqdm(dataset):\n",
     "    events, target_id = sample\n",
     "    # check for ambiguous satellite\n",
@@ -84,31 +95,44 @@
     "        continue\n",
     "    event_indices = (events[\"t\"] // 1e3).astype(np.int64)\n",
     "    np.add.at(array, event_indices, 1)\n",
-    "    nperseg = 16\n",
-    "    frequencies, times, Sxx = spectrogram(\n",
-    "        array, fs=1, nperseg=nperseg, noverlap=nperseg // 2\n",
-    "    )\n",
+    "    nperseg = 10\n",
     "\n",
-    "    # Set the figure size dynamically based on the number of frequency bands\n",
-    "    fig_height = len(frequencies) / 10  # Adjust the divisor to control height scaling\n",
-    "    plt.figure(figsize=(10, fig_height))\n",
+    "    for i in range(n_chunks):\n",
+    "        start = i * chunk_size\n",
+    "        end = (i + 1) * chunk_size\n",
+    "        chunk_array = array[start:end]\n",
+    "        \n",
+    "        frequencies, times, Sxx = spectrogram(\n",
+    "            chunk_array, fs=1, nperseg=nperseg, noverlap=nperseg // 2\n",
+    "        )\n",
     "\n",
-    "    plt.pcolormesh(times, frequencies, 10 * np.log10(Sxx + 1e-6), shading=\"auto\")\n",
-    "    plt.axis(\"off\")\n",
+    "        # Set the figure size dynamically based on the number of frequency bands\n",
+    "        fig_height = len(frequencies) / 20  # Adjust the divisor to control height scaling\n",
+    "        plt.figure(figsize=(2, fig_height))\n",
     "\n",
-    "    file_path = Path(f\"{save_to_folder}/{target_id}/{sample_counts[target_id]}.png\")\n",
-    "    file_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    plt.savefig(file_path, bbox_inches=\"tight\", pad_inches=0)\n",
-    "    plt.close()  # Close the figure to free memory\n",
+    "        plt.pcolormesh(times, frequencies, 10 * np.log10(Sxx + 1e-6), shading=\"auto\")\n",
+    "        plt.axis(\"off\")\n",
+    "\n",
+    "        file_path = Path(f\"{save_to_folder}/{target_id}/{sample_counts[target_id]}_chunk_{i}.png\")\n",
+    "        file_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        plt.savefig(file_path, bbox_inches=\"tight\", pad_inches=0)\n",
+    "        plt.close()  # Close the figure to free memory\n",
     "\n",
     "    sample_counts[target_id] += 1\n",
     "\n",
-    "print(sample_counts)"
+    "print(sample_counts)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +148,7 @@
     "from pathlib import Path\n",
     "\n",
     "save_to_folder = \"data/astrosite/spectrograms\"\n",
-    "min_samples = 30  # Set your minimum number of samples here\n",
+    "min_samples = 120  # Set your minimum number of samples here\n",
     "\n",
     "for target_id, count in sample_counts.items():\n",
     "    if count < min_samples:\n",
