blacken dataset generation script

--- a/classification_dataset_generation.ipynb
+++ b/classification_dataset_generation.ipynb
@@ -21,8 +21,10 @@
     "\n",
     "dataset_path = \"data/astrosite/recordings\"\n",
     "\n",
-    "# dataset = LabelledEventsAstrositeDataset(dataset_path, split=\"all\")\n",
-    "dataset = LabelledEventsAstrositeDataset(dataset_path, split=[\"39483\", \"39485\", \"39624\", \"40921\", \"43751\", \"43752\", \"50574\", \"51102\"])\n",
+    "dataset = LabelledEventsAstrositeDataset(\n",
+    "    dataset_path,\n",
+    "    split=[\"39483\", \"39485\", \"39624\", \"40921\", \"43751\", \"43752\", \"50574\", \"51102\"],\n",
+    ")\n",
     "len(dataset)"
    ]
   },
@@ -101,26 +103,30 @@
     "        start = i * chunk_size\n",
     "        end = (i + 1) * chunk_size\n",
     "        chunk_array = array[start:end]\n",
-    "        \n",
+    "\n",
     "        frequencies, times, Sxx = spectrogram(\n",
     "            chunk_array, fs=1, nperseg=nperseg, noverlap=nperseg // 2\n",
     "        )\n",
     "\n",
     "        # Set the figure size dynamically based on the number of frequency bands\n",
-    "        fig_height = len(frequencies) / 20  # Adjust the divisor to control height scaling\n",
+    "        fig_height = (\n",
+    "            len(frequencies) / 20\n",
+    "        )  # Adjust the divisor to control height scaling\n",
     "        plt.figure(figsize=(2, fig_height))\n",
     "\n",
     "        plt.pcolormesh(times, frequencies, 10 * np.log10(Sxx + 1e-6), shading=\"auto\")\n",
     "        plt.axis(\"off\")\n",
     "\n",
-    "        file_path = Path(f\"{save_to_folder}/{target_id}/{sample_counts[target_id]}_chunk_{i}.png\")\n",
+    "        file_path = Path(\n",
+    "            f\"{save_to_folder}/{target_id}/{sample_counts[target_id]}_chunk_{i}.png\"\n",
+    "        )\n",
     "        file_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "        plt.savefig(file_path, bbox_inches=\"tight\", pad_inches=0)\n",
     "        plt.close()  # Close the figure to free memory\n",
     "\n",
     "    sample_counts[target_id] += 1\n",
     "\n",
-    "print(sample_counts)\n"
+    "print(sample_counts)"
    ]
   },
   {
